# youtube-history-metrics

./: .gitignore  AGENTS.md  README.md
Backend/: main.py  pyproject.toml  requirements.txt
Backend/src/: analytics.py  api_handling.py  api_routes.py  constants.py  data_processing.py  data_store.py  main.py  models.py  redis_utils.py  session_pipeline.py  visualization.py
Backend/tests/: analytics_tests.py  data_processing_tests.py  data_store_tests.py
Frontend/: .prettierrc  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs
Frontend/static/css/: app.css
Frontend/static/js/: bundle.js  data_process_steps.js  main.js
Frontend/tailwindcss/: postcss.config.js  tailwind.config.js
Frontend/templates/: base.html  index.html  instructions.html
Frontend/templates/partials/: analytics.html  error.html  vids_table.html
Frontend/templates/partials/steps/: request_data.html  verify_and_extract.html
FrontendReact/: package.json  pnpm-lock.yaml  vite.config.ts
FrontendReact/src/: App.tsx
